clean up project to handle using connexion fully instead of blueprints: - rename swagger.yml to familytree_api.yml - remove blueprint from health_check.py and app.py as connexion takes care of all of this - rename views/ to api/
