# family_tree/api/health_check.py
@@ -1,0 +1,9 @@
+"""
+API Health Check
+"""
+
+from flask import jsonify
+
+
+def health_check():
+    return jsonify(True)
