# family_tree/app.py
@@ -2,15 +2,9 @@ from flask_cors import CORS  # To work with Connexion
 import connexion
 
 
-from family_tree.views import health_check
-
-
 def create_app():
     app = connexion.FlaskApp(__name__, specification_dir="swagger/")
-    app.add_api("swagger.yml")
-
-    # register blueprints
-    app.app.register_blueprint(health_check.blueprint, url_prefix="/api")
+    app.add_api("familytree_api.yml")
 
     CORS(app.app)
 
